{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 43,
  "lineage": "f2989f09-884e-17fd-2556-d4c6e880de8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afe1259fbed864c5",
            "arn": "arn:aws:ec2:us-east-1:031857855861:elastic-ip/eipalloc-0afe1259fbed864c5",
            "association_id": "eipassoc-0497b8b59608ff9be",
            "domain": "vpc",
            "id": "eipalloc-0afe1259fbed864c5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0020fc400f8c0f597",
            "private_dns": "ip-10-10-1-129.ec2.internal",
            "private_ip": "10.10.1.129",
            "public_dns": "ec2-100-25-176-245.compute-1.amazonaws.com",
            "public_ip": "100.25.176.245",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-eip-for-nat"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-eip-for-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bdd88bd06d16ba03",
            "arn": "arn:aws:ec2:us-east-1:031857855861:instance/i-0d6583292c2238fc3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6583292c2238fc3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02054563bf275eded"
              }
            ],
            "primary_network_interface_id": "eni-02054563bf275eded",
            "private_dns": "ip-10-10-1-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.118",
            "public_dns": "ec2-107-22-51-94.compute-1.amazonaws.com",
            "public_ip": "107.22.51.94",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 125,
                "volume_id": "vol-0dcd82d9ba130cdba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-087570150aa0a144a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f81388b3b06ec19c",
            "tags": {
              "Name": "terraform-ec2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087570150aa0a144a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "i-0d6583292c2238fc3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:internet-gateway/igw-0309207b3e361c91b",
            "id": "igw-0309207b3e361c91b",
            "owner_id": "031857855861",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-internet_gateway"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-internet_gateway"
            },
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afe1259fbed864c5",
            "association_id": "eipassoc-0497b8b59608ff9be",
            "connectivity_type": "public",
            "id": "nat-0f3275bb611762a3a",
            "network_interface_id": "eni-0020fc400f8c0f597",
            "private_ip": "10.10.1.129",
            "public_ip": "100.25.176.245",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f81388b3b06ec19c",
            "tags": {
              "Name": "terraform-nat-gw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:route-table/rtb-07aa4449880803d68",
            "id": "rtb-07aa4449880803d68",
            "owner_id": "031857855861",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f3275bb611762a3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private-rtb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "rtb-07aa4449880803d68",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:route-table/rtb-0557ae7655fa0b2ae",
            "id": "rtb-0557ae7655fa0b2ae",
            "owner_id": "031857855861",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0309207b3e361c91b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-rtb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "rtb-0557ae7655fa0b2ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003eeaae4309b8dc4",
            "region": "us-east-1",
            "route_table_id": "rtb-07aa4449880803d68",
            "subnet_id": "subnet-033f6d7d68784e7c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dabcdab4af2dca3",
            "region": "us-east-1",
            "route_table_id": "rtb-07aa4449880803d68",
            "subnet_id": "subnet-01fec6114e8433460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcfca422844fe1fb",
            "region": "us-east-1",
            "route_table_id": "rtb-07aa4449880803d68",
            "subnet_id": "subnet-05d1c2b125e44ff0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_c",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c112faf1a27d614",
            "region": "us-east-1",
            "route_table_id": "rtb-0557ae7655fa0b2ae",
            "subnet_id": "subnet-0f81388b3b06ec19c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcf52f39f1574106",
            "region": "us-east-1",
            "route_table_id": "rtb-0557ae7655fa0b2ae",
            "subnet_id": "subnet-0e72175f6655e2c30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0162cfb8274d74a53",
            "region": "us-east-1",
            "route_table_id": "rtb-0557ae7655fa0b2ae",
            "subnet_id": "subnet-07d3a9c1640495ecc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:security-group/sg-087570150aa0a144a",
            "description": "Allow inbound traffic and all outbound traffic to terraform vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087570150aa0a144a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "031857855861",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "sg-087570150aa0a144a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-033f6d7d68784e7c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033f6d7d68784e7c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-033f6d7d68784e7c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-01fec6114e8433460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fec6114e8433460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-01fec6114e8433460",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-05d1c2b125e44ff0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d1c2b125e44ff0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1c"
            },
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-05d1c2b125e44ff0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-0f81388b3b06ec19c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f81388b3b06ec19c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-0f81388b3b06ec19c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-0e72175f6655e2c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e72175f6655e2c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1b"
            },
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-0e72175f6655e2c30",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-07d3a9c1640495ecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d3a9c1640495ecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1c"
            },
            "vpc_id": "vpc-06f20d26b707349e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-07d3a9c1640495ecc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:vpc/vpc-06f20d26b707349e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ec9c5377d563a219",
            "default_route_table_id": "rtb-095cba725ff253d0b",
            "default_security_group_id": "sg-0ef7f07e276abdc82",
            "dhcp_options_id": "dopt-0c25131b26d1a2e14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f20d26b707349e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095cba725ff253d0b",
            "owner_id": "031857855861",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "vpc-06f20d26b707349e8",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "terraform-sg_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:security-group-rule/sgr-07977e625cdbc0148",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07977e625cdbc0148",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-087570150aa0a144a",
            "security_group_rule_id": "sgr-07977e625cdbc0148",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "sgr-07977e625cdbc0148",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "terraform-sg-http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:security-group-rule/sgr-0328c23dee8bbe2cc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-0328c23dee8bbe2cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-087570150aa0a144a",
            "security_group_rule_id": "sgr-0328c23dee8bbe2cc",
            "tags": {
              "Name": "HTTP"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "HTTP"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "sgr-0328c23dee8bbe2cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "terraform-sg-ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:security-group-rule/sgr-0f6ad4ec50c701517",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH from anywhere",
            "from_port": 22,
            "id": "sgr-0f6ad4ec50c701517",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-087570150aa0a144a",
            "security_group_rule_id": "sgr-0f6ad4ec50c701517",
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "SSH"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "sgr-0f6ad4ec50c701517",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}